--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,13 +17,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RecordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RecordController">
    <top>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="instructionLabel" alignment="CENTER" prefHeight="50.0" prefWidth="400.0" styleClass="scene-header" text="Press record to start recording">
+            <Label fx:id="instructionLabel" alignment="CENTER" prefHeight="50.0" prefWidth="400.0" styleClass="scene-header" text="Press to start recording">
                <font>
-                  <Font size="24.0" />
+                  <Font size="18.0" />
                </font></Label>
          </children></HBox>
    </top>
@@ -47,7 +53,7 @@
                         <Button fx:id="redoButton" mnemonicParsing="false" onAction="#redoRecording" text="Redo" />
                         <Button fx:id="playButton" mnemonicParsing="false" onAction="#playRecording" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
                            <graphic>
-                              <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="playOrStopImage" fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../imageResources/icons8-play-filled-100.png" />
                                  </image>
@@ -58,7 +64,7 @@
                   </HBox>
                   <Button fx:id="stopButton" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
                      <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../imageResources/icons8-stop-filled-100.png" />
                            </image>
@@ -67,7 +73,7 @@
                   </Button>
                   <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
                      <graphic>
-                        <ImageView fitHeight="39.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../imageResources/icons8-record-100.png" />
                            </image>
@@ -76,10 +82,10 @@
                   </Button>
                </children>
             </StackPane>
-            <Button fx:id="demoButton" mnemonicParsing="false" onAction="#playDemo" text="Play Demo" />
+            <Button fx:id="demoButton" mnemonicParsing="false" onAction="#playDemo" prefWidth="95.0" text="Play Demo" />
          </children>
          <BorderPane.margin>
-            <Insets top="15.0" />
+            <Insets />
          </BorderPane.margin>
       </VBox>
    </center>
