--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadScreen.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadController">
    <children>
       <VBox alignment="CENTER" layoutX="508.0" layoutY="118.0" prefHeight="480.0" prefWidth="353.0" spacing="10.0">
          <children>
@@ -84,6 +89,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
+            <ProgressIndicator fx:id="loadingIndicator" />
          </children>
          <padding>
             <Insets top="10.0" />
