refactored changing scenes

--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/Workspace.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/Workspace.fxml
@@ -43,7 +43,7 @@
                               <Insets top="15.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="ratingLabel" alignment="CENTER" layoutY="154.0" prefHeight="32.0" prefWidth="400.0" text="Placeholder">
+                        <Label fx:id="ratingLabel" alignment="CENTER" layoutY="154.0" prefHeight="32.0" prefWidth="400.0" text="Not Yet Rated">
                            <font>
                               <Font size="16.0" />
                            </font>
